--- a/package.json
+++ b/package.json
@@ -2,11 +2,20 @@
   "name": "crm-basic",
   "version": "0.1.0",
   "private": true,
-  "main": "src/electron.js",
+  "main": "public/electron.js",
+  "author": "CL",
+  "description": "App basic CRM only CRUD",
+  "build": {
+    "appId": "crmbasic.app"
+  },
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "concurrently": "^6.0.0",
+    "cross-env": "^7.0.3",
+    "electron-is-dev": "^2.0.0",
     "firebase": "^8.3.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
@@ -14,14 +23,18 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sweetalert2": "^10.15.7",
+    "typescript": "^4.2.3",
+    "wait-on": "^5.3.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "electron": "electron ."
+    "start-react": "react-scripts start",
+    "build-react": "react-scripts build",
+    "test-react": "react-scripts test --env=jsdom",
+    "eject-react": "react-scripts eject",
+    "build-electron": "electron-builder",
+    "build": "yarn build-react && yarn build-electron",
+    "start": "concurrently \"cross-env BROWSER=none yarn start-react\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "electron": "^12.0.2"
+    "electron": "^12.0.2",
+    "electron-builder": "^22.10.5"
   }
 }
